--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "build": "vite build",
     "test": "vitest",
-    "watch": "vite build --watch"
+    "watch": "vite build --watch",
+    "start:firefox": "web-ext run --source-dir ./dist/"
   },
   "devDependencies": {
     "@types/firefox-webext-browser": "^120.0.0",
     "@types/node": "^25.0.0",
     "typescript": "^5.3.0",
     "vite": "^5.0.0",
-    "vitest": "^1.0.0"
+    "vitest": "^1.0.0",
+    "web-ext": "^9.2.0"
   }
 }
