--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,7 +13,7 @@
   ],
   "background": {
     "scripts": [
-      "dist/background.js"
+      "background.js"
     ],
     "type": "module"
   },
@@ -23,7 +23,7 @@
         "*://*.google.com/maps/*"
       ],
       "js": [
-        "dist/content.js"
+        "content.js"
       ],
       "run_at": "document_idle"
     }
