--- a/public/manifest.json
+++ b/public/manifest.json
@@ -25,13 +25,16 @@
       "js": [
         "content.js"
       ],
+      "css": [
+        "content.css"
+      ],
       "run_at": "document_idle"
     }
   ],
   "web_accessible_resources": [
     {
       "resources": [
-        "icon.png",
+        "tabelog-logo.png",
         "assets/*"
       ],
       "matches": [
